--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     <input id="nick" class="form-control save" data-box-id="0" placeholder="Nick" maxlength="15" />
                     <select id="gamemode" class="form-control" onchange="setserver($(this).val());" required>
                         <option selected disabled>Gamemode:</option>
-                        <option value="Agarhost-matthewjamessmith200483023.codeanyapp.com:8888">FFA</option>
+                        <option value="http://Agarhost-matthewjamessmith200483023.codeanyapp.com:8888">FFA</option>
                     </select>
                     <br clear="both" />
                 </div>
